syntax = "proto3";
package user;

option go_package = "pkg/proto/user";

import "google/protobuf/timestamp.proto";

service Users {
  rpc GetNftCreators (Empty) returns (UsersResponse) {
  }
}

message Wallet {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message UserEdges {
  repeated Wallet wallets = 1;
}

message User {
  uint64 id = 1;
  string name = 2;
  string email = 3;
  string profile_image_url = 4;
  string twitter_handle = 5;
  bool is_nft_creator = 6;
  UserEdges edges = 7;
}

message UsersResponse {
  repeated User users = 1;
}

message Empty {
}